<resources>
    <string name="app_name">Denandra-HanaBank-Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_desciption">img desciption</string>
    <string name="error_memuat_data">Error load data</string>
    <string name="ulang_lagi">Please Retry</string>
    <string name="cari_pokemon_mu">Search pokemon</string>
    <string name="no_results_found">No results found</string>
    <string name="evolves_from">Evolves from %1$s</string>
    <string name="set_info_format">%1$s · #%2$s/%3$s</string>
    <string name="artist_format">%1$s</string>
    <string name="hp">HP</string>
    <string name="rarity">Rarity</string>
    <string name="evolves_from_single">Evolves from</string>
    <string name="set">Set</string>
    <string name="artist">Artist</string>
    <string name="weekness">Weekness</string>
    <string name="attacks">Attacks</string>
    <string name="information">Information</string>
</resources>